remove FutureWarning after xcube update, Biomass is working after update

--- a/notebooks/Cloud_CCI.ipynb
+++ b/notebooks/Cloud_CCI.ipynb
@@ -32,15 +32,7 @@
    "execution_count": 1,
    "id": "f05b0d63-ff02-41f8-9070-f0d9c44d9a3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen abc>:106: FutureWarning: xarray subclass VectorDataCube should explicitly define __slots__\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from xcube.core.store import new_data_store\n",
     "from esa_climate_toolbox.core import get_op\n",
@@ -51,11 +43,7 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# Suppress FutureWarnings related to xarray subclassing\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning, message=\".*xarray subclass VectorDataCube.*\")\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
+    "%matplotlib inline"
    ]
   },
   {
@@ -9631,7 +9619,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f0ac9ce3230>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f238c1ceb40>"
       ]
      },
      "execution_count": 4,
@@ -9904,7 +9892,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f0ac92da3c0>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f230f6a5d30>"
       ]
      },
      "execution_count": 5,
@@ -10028,7 +10016,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.CLOUD.mon.L3C.CLD_PRODUCTS.multi-sensor.m...\n",
-      "    date_created:            2025-04-15T13:42:12.896505\n",
+      "    date_created:            2025-04-16T11:18:46.576835\n",
       "    processing_level:        L3C\n",
       "    time_coverage_start:     2016-06-01T00:00:00\n",
       "    time_coverage_end:       2016-07-01T00:00:00\n",
