--- a/notebooks/Fire_CCI.ipynb
+++ b/notebooks/Fire_CCI.ipynb
@@ -32,15 +32,7 @@
    "execution_count": 1,
    "id": "f05b0d63-ff02-41f8-9070-f0d9c44d9a3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen abc>:106: FutureWarning: xarray subclass VectorDataCube should explicitly define __slots__\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from xcube.core.store import new_data_store\n",
     "from esa_climate_toolbox.core import get_op\n",
@@ -51,11 +43,7 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# Suppress FutureWarnings related to xarray subclassing\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning, message=\".*xarray subclass VectorDataCube.*\")\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
+    "%matplotlib inline"
    ]
   },
   {
@@ -145,7 +133,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/cmsaf/cmsaf-ops3/stkothe/KE/ect/lib/python3.12/site-packages/xcube_cci/cciodp.py:1960: CciOdpWarning: Variable \"vegetation_class_name\" has no fill value, cannot set one. For parts where no data is available you will see random values. This is usually the case when data is missing for a time step.\n",
+      "/cmsaf/cmsaf-ops3/stkothe/KE/ect/lib/python3.12/site-packages/xcube_cci/cciodp.py:2053: CciOdpWarning: Variable \"vegetation_class_name\" has no fill value, cannot set one. For parts where no data is available you will see random values. This is usually the case when data is missing for a time step.\n",
       "  warnings.warn(f'Variable \"{fixed_key}\" has no fill value, '\n"
      ]
     },
@@ -761,7 +749,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f282f5e0c50>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7ff1200eb290>"
       ]
      },
      "execution_count": 4,
@@ -860,7 +848,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f282f35ad50>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7ff0a4448cb0>"
       ]
      },
      "execution_count": 5,
@@ -967,7 +955,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.FIRE.mon.L4.BA.MODIS.Terra.MODIS_TERRA.v5...\n",
-      "    date_created:            2025-04-15T13:44:46.311773\n",
+      "    date_created:            2025-04-16T11:19:49.694448\n",
       "    processing_level:        L4\n",
       "    time_coverage_start:     2022-06-01T00:00:00\n",
       "    time_coverage_end:       2022-07-01T00:00:00\n",
