--- a/notebooks/GHG_CCI.ipynb
+++ b/notebooks/GHG_CCI.ipynb
@@ -32,15 +32,7 @@
    "execution_count": 1,
    "id": "f05b0d63-ff02-41f8-9070-f0d9c44d9a3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen abc>:106: FutureWarning: xarray subclass VectorDataCube should explicitly define __slots__\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from xcube.core.store import new_data_store\n",
     "from esa_climate_toolbox.core import get_op\n",
@@ -51,11 +43,7 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# Suppress FutureWarnings related to xarray subclassing\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning, message=\".*xarray subclass VectorDataCube.*\")\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
+    "%matplotlib inline"
    ]
   },
   {
@@ -382,7 +370,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.GeoDataFrameDescriptor at 0x7f582a9cce90>"
+       "<xcube.core.store.descriptor.GeoDataFrameDescriptor at 0x7f7cbc077a10>"
       ]
      },
      "execution_count": 4,
@@ -502,7 +490,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f582951e6f0>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f7c607bce30>"
       ]
      },
      "execution_count": 5,
