--- a/notebooks/LST_CCI.ipynb
+++ b/notebooks/LST_CCI.ipynb
@@ -32,15 +32,7 @@
    "execution_count": 1,
    "id": "f05b0d63-ff02-41f8-9070-f0d9c44d9a3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen abc>:106: FutureWarning: xarray subclass VectorDataCube should explicitly define __slots__\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from xcube.core.store import new_data_store\n",
     "from esa_climate_toolbox.core import get_op\n",
@@ -51,11 +43,7 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# Suppress FutureWarnings related to xarray subclassing\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning, message=\".*xarray subclass VectorDataCube.*\")\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
+    "%matplotlib inline"
    ]
   },
   {
@@ -1107,7 +1095,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f46beca4cb0>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f3facdd9bb0>"
       ]
      },
      "execution_count": 4,
@@ -1215,7 +1203,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f46bd7acf20>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f3facc5b920>"
       ]
      },
      "execution_count": 5,
@@ -1318,7 +1306,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.LST.day.L3C.LST.multi-sensor.multi-platfo...\n",
-      "    date_created:            2025-04-15T13:55:35.426392\n",
+      "    date_created:            2025-04-16T11:25:49.882199\n",
       "    processing_level:        L3C\n",
       "    time_coverage_start:     2020-06-21T00:00:00\n",
       "    time_coverage_end:       2020-06-22T00:00:00\n",
