--- a/notebooks/Vegetation_CCI.ipynb
+++ b/notebooks/Vegetation_CCI.ipynb
@@ -32,15 +32,7 @@
    "execution_count": 1,
    "id": "f05b0d63-ff02-41f8-9070-f0d9c44d9a3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen abc>:106: FutureWarning: xarray subclass VectorDataCube should explicitly define __slots__\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from xcube.core.store import new_data_store\n",
     "from esa_climate_toolbox.core import get_op\n",
@@ -51,11 +43,7 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# Suppress FutureWarnings related to xarray subclassing\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning, message=\".*xarray subclass VectorDataCube.*\")\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
+    "%matplotlib inline"
    ]
   },
   {
@@ -143,20 +131,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1ccb7546-70f0-479d-bb0a-d902190500af",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/cmsaf/cmsaf-ops3/stkothe/KE/ect/lib/python3.12/site-packages/xcube_cci/cciodp.py:1960: CciOdpWarning: Variable \"crs\" has no fill value, cannot set one. For parts where no data is available you will see random values. This is usually the case when data is missing for a time step.\n",
-      "  warnings.warn(f'Variable \"{fixed_key}\" has no fill value, '\n",
-      "/cmsaf/cmsaf-ops3/stkothe/KE/ect/lib/python3.12/site-packages/xcube_cci/cciodp.py:574: UserWarning: Could not convert grid mapping \"latitude_longitude\" into CRS\n",
-      "  warnings.warn(f'Could not convert grid mapping '\n"
-     ]
-    },
     {
      "data": {
       "application/json": {
@@ -324,36 +302,65 @@
         },
         "time": {
          "attrs": {
+          "axis": "T",
+          "bounds": "time_bnds",
           "calendar": "proleptic_gregorian",
+          "chunk_sizes": 74,
+          "data_type": "float64",
+          "dimensions": [
+           "time"
+          ],
+          "file_chunk_sizes": 74,
+          "file_dimensions": [
+           "time"
+          ],
+          "fill_value": null,
+          "orig_data_type": "float64",
           "shape": [
            640618
           ],
           "size": 640618,
           "standard_name": "time",
-          "units": "seconds since 1970-01-01T00:00:00Z"
+          "units": "days since 1970-01-01T00:00:00Z"
          },
          "dims": [
           "time"
          ],
-         "dtype": "int64",
+         "dtype": "float64",
          "name": "time"
         },
         "time_bnds": {
          "attrs": {
-          "calendar": "proleptic_gregorian",
-          "shape": [
-           2,
-           640618
+          "chunk_sizes": [
+           1,
+           2
           ],
-          "size": 1281236,
-          "standard_name": "time_bnds",
-          "units": "seconds since 1970-01-01T00:00:00Z"
+          "data_type": "float64",
+          "dimensions": [
+           "time",
+           "nbnds"
+          ],
+          "file_chunk_sizes": [
+           1,
+           2
+          ],
+          "file_dimensions": [
+           "time",
+           "nbnds"
+          ],
+          "fill_value": null,
+          "orig_data_type": "float64",
+          "shape": [
+           640618,
+           2
+          ],
+          "size": 1281236
          },
          "dims": [
           "time",
           "nbnds"
          ],
-         "dtype": "int64",
+         "dtype": "float64",
          "name": "time_bnds"
         }
        },
@@ -436,7 +443,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "BHR_NIR BHR_SW standard_error_correlation",
           "missing_value": -128,
@@ -485,7 +492,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "BHR_NIR DHR_NIR standard_error_correlation",
           "missing_value": -128,
@@ -534,7 +541,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "BHR_NIR DHR_SW standard_error_correlation",
           "missing_value": -128,
@@ -583,7 +590,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "BHR_NIR DHR_VIS standard_error_correlation",
           "missing_value": -128,
@@ -730,7 +737,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "BHR_SW DHR_NIR standard_error_correlation",
           "missing_value": -128,
@@ -779,7 +786,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "BHR_SW DHR_SW standard_error_correlation",
           "missing_value": -128,
@@ -828,7 +835,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "BHR_SW DHR_VIS standard_error_correlation",
           "missing_value": -128,
@@ -975,7 +982,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "BHR_VIS BHR_NIR standard_error_correlation",
           "missing_value": -128,
@@ -1024,7 +1031,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "BHR_VIS BHR_SW standard_error_correlation",
           "missing_value": -128,
@@ -1073,7 +1080,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "BHR_VIS DHR_NIR standard_error_correlation",
           "missing_value": -128,
@@ -1122,7 +1129,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "BHR_VIS DHR_SW standard_error_correlation",
           "missing_value": -128,
@@ -1171,7 +1178,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "BHR_VIS DHR_VIS standard_error_correlation",
           "missing_value": -128,
@@ -1319,7 +1326,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "Cab BHR_NIR standard_error_correlation",
           "missing_value": -128,
@@ -1368,7 +1375,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "Cab BHR_SW standard_error_correlation",
           "missing_value": -128,
@@ -1417,7 +1424,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "Cab BHR_VIS standard_error_correlation",
           "missing_value": -128,
@@ -1466,7 +1473,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "Cab DHR_NIR standard_error_correlation",
           "missing_value": -128,
@@ -1515,7 +1522,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "Cab DHR_SW standard_error_correlation",
           "missing_value": -128,
@@ -1564,7 +1571,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "Cab DHR_VIS standard_error_correlation",
           "missing_value": -128,
@@ -1661,7 +1668,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "Cab LAI standard_error_correlation",
           "missing_value": -128,
@@ -1710,7 +1717,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "Cab fAPAR_Cab standard_error_correlation",
           "missing_value": -128,
@@ -1759,7 +1766,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "Cab fAPAR standard_error_correlation",
           "missing_value": -128,
@@ -1858,7 +1865,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "DHR_NIR DHR_SW standard_error_correlation",
           "missing_value": -128,
@@ -2103,7 +2110,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "DHR_VIS DHR_NIR standard_error_correlation",
           "missing_value": -128,
@@ -2152,7 +2159,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "DHR_VIS DHR_SW standard_error_correlation",
           "missing_value": -128,
@@ -2301,7 +2308,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "LAI BHR_NIR standard_error_correlation",
           "missing_value": -128,
@@ -2350,7 +2357,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "LAI BHR_SW standard_error_correlation",
           "missing_value": -128,
@@ -2399,7 +2406,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "LAI BHR_VIS standard_error_correlation",
           "missing_value": -128,
@@ -2448,7 +2455,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "LAI DHR_NIR standard_error_correlation",
           "missing_value": -128,
@@ -2497,7 +2504,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "LAI DHR_SW standard_error_correlation",
           "missing_value": -128,
@@ -2546,7 +2553,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "LAI DHR_VIS standard_error_correlation",
           "missing_value": -128,
@@ -2643,7 +2650,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "LAI fAPAR_Cab standard_error_correlation",
           "missing_value": -128,
@@ -2692,7 +2699,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "LAI fAPAR standard_error_correlation",
           "missing_value": -128,
@@ -2823,7 +2830,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "fAPAR BHR_NIR standard_error_correlation",
           "missing_value": -128,
@@ -2872,7 +2879,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "fAPAR BHR_SW standard_error_correlation",
           "missing_value": -128,
@@ -2921,7 +2928,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "fAPAR BHR_VIS standard_error_correlation",
           "missing_value": -128,
@@ -3020,7 +3027,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "fAPAR_Cab BHR_NIR standard_error_correlation",
           "missing_value": -128,
@@ -3069,7 +3076,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "fAPAR_Cab BHR_SW standard_error_correlation",
           "missing_value": -128,
@@ -3118,7 +3125,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "fAPAR_Cab BHR_VIS standard_error_correlation",
           "missing_value": -128,
@@ -3167,7 +3174,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "fAPAR_Cab DHR_NIR standard_error_correlation",
           "missing_value": -128,
@@ -3216,7 +3223,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "fAPAR_Cab DHR_SW standard_error_correlation",
           "missing_value": -128,
@@ -3265,7 +3272,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "fAPAR_Cab DHR_VIS standard_error_correlation",
           "missing_value": -128,
@@ -3362,7 +3369,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "fAPAR DHR_NIR standard_error_correlation",
           "missing_value": -128,
@@ -3411,7 +3418,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "fAPAR DHR_SW standard_error_correlation",
           "missing_value": -128,
@@ -3460,7 +3467,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "fAPAR DHR_VIS standard_error_correlation",
           "missing_value": -128,
@@ -3557,7 +3564,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "grid_mapping": "crs",
           "long_name": "fAPAR fAPAR_Cab standard_error_correlation",
           "missing_value": -128,
@@ -3860,10 +3867,10 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f7eb7f30f50>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7ffaad33e120>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3886,7 +3893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a0ee1118-47e2-47c4-9401-1bb069776fdc",
    "metadata": {},
    "outputs": [
@@ -3997,10 +4004,10 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f7eb7f332c0>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7ffa3dcf5760>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4025,7 +4032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8a2be689-288c-4fb5-abe9-99b4b84eef07",
    "metadata": {},
    "outputs": [],
@@ -4050,7 +4057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "145b10bc-68b4-4645-a4a8-761965cb6098",
    "metadata": {},
    "outputs": [],
@@ -4077,7 +4084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "192daaeb-241a-4fba-956f-3e7ac8cb04b5",
    "metadata": {},
    "outputs": [
@@ -4103,7 +4110,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.VEGETATION.5-days.L3S.VP_PRODUCTS.VEGETAT...\n",
-      "    date_created:            2025-04-15T14:38:44.387425\n",
+      "    date_created:            2025-04-16T13:30:38.677259\n",
       "    processing_level:        L3S\n",
       "    time_coverage_start:     2000-01-01T00:00:00\n",
       "    time_coverage_end:       2003-01-31T23:59:59\n",
@@ -4130,7 +4137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "65ec997b-a0e8-40d7-8aa9-737a3ac2ec0d",
    "metadata": {
     "scrolled": true
