--- a/notebooks/Aerosol_CCI.ipynb
+++ b/notebooks/Aerosol_CCI.ipynb
@@ -32,15 +32,7 @@
    "execution_count": 1,
    "id": "f05b0d63-ff02-41f8-9070-f0d9c44d9a3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen abc>:106: FutureWarning: xarray subclass VectorDataCube should explicitly define __slots__\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from xcube.core.store import new_data_store\n",
     "from esa_climate_toolbox.core import get_op\n",
@@ -51,11 +43,7 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# Suppress FutureWarnings related to xarray subclassing\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning, message=\".*xarray subclass VectorDataCube.*\")\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
+    "%matplotlib inline"
    ]
   },
   {
@@ -2559,7 +2547,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fefb47ef950>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f949ab1f440>"
       ]
      },
      "execution_count": 4,
@@ -2703,7 +2691,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fefb43f9be0>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f949ab03fb0>"
       ]
      },
      "execution_count": 5,
@@ -2806,7 +2794,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.AEROSOL.day.L3C.AER_PRODUCTS.AATSR.Envisa...\n",
-      "    date_created:            2025-04-10T08:29:57.662787\n",
+      "    date_created:            2025-04-16T11:04:51.014622\n",
       "    processing_level:        L3C\n",
       "    time_coverage_start:     2011-06-21T00:00:00\n",
       "    time_coverage_end:       2011-06-22T00:00:00\n",
@@ -2868,14 +2856,6 @@
     "plt.ylabel(\"Latitude\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ecac0da-9d74-4c8c-b45c-2fcc81c6a7d6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
