--- a/notebooks/Icesheets_CCI.ipynb
+++ b/notebooks/Icesheets_CCI.ipynb
@@ -32,15 +32,7 @@
    "execution_count": 1,
    "id": "f05b0d63-ff02-41f8-9070-f0d9c44d9a3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen abc>:106: FutureWarning: xarray subclass VectorDataCube should explicitly define __slots__\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from xcube.core.store import new_data_store\n",
     "from esa_climate_toolbox.core import get_op\n",
@@ -51,11 +43,7 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# Suppress FutureWarnings related to xarray subclassing\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning, message=\".*xarray subclass VectorDataCube.*\")\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
+    "%matplotlib inline"
    ]
   },
   {
@@ -147,14 +135,6 @@
    "id": "1ccb7546-70f0-479d-bb0a-d902190500af",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/cmsaf/cmsaf-ops3/stkothe/KE/ect/lib/python3.12/site-packages/xcube_cci/cciodp.py:1960: CciOdpWarning: Variable \"grid_projection\" has no fill value, cannot set one. For parts where no data is available you will see random values. This is usually the case when data is missing for a time step.\n",
-      "  warnings.warn(f'Variable \"{fixed_key}\" has no fill value, '\n"
-     ]
-    },
     {
      "data": {
       "application/json": {
@@ -593,7 +573,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fd675bcfb60>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fa8c0641520>"
       ]
      },
      "execution_count": 4,
@@ -667,7 +647,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fd675bcd610>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fa8c08d2a20>"
       ]
      },
      "execution_count": 5,
@@ -771,7 +751,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.ICESHEETS.yr.Unspecified.SEC.multi-sensor...\n",
-      "    date_created:            2025-04-15T13:49:24.645212\n",
+      "    date_created:            2025-04-16T11:22:56.456245\n",
       "    processing_level:        Unspecified\n",
       "    time_coverage_start:     2014-01-01T00:00:00\n",
       "    time_coverage_end:       2015-01-01T00:00:00\n",
