--- a/notebooks/LandCover_CCI.ipynb
+++ b/notebooks/LandCover_CCI.ipynb
@@ -32,15 +32,7 @@
    "execution_count": 1,
    "id": "f05b0d63-ff02-41f8-9070-f0d9c44d9a3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen abc>:106: FutureWarning: xarray subclass VectorDataCube should explicitly define __slots__\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from xcube.core.store import new_data_store\n",
     "from esa_climate_toolbox.core import get_op\n",
@@ -51,11 +43,7 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# Suppress FutureWarnings related to xarray subclassing\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning, message=\".*xarray subclass VectorDataCube.*\")\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
+    "%matplotlib inline"
    ]
   },
   {
@@ -287,7 +275,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -1,
+          "fill_value": 255,
           "long_name": "number of class changes",
           "orig_data_type": "uint8",
           "shape": [
@@ -350,7 +338,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -1,
+          "fill_value": 255,
           "flag_meanings": "invalid clear_land clear_water clear_snow_ice cloud cloud_shadow",
           "flag_values": [
            0,
@@ -520,7 +508,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -1,
+          "fill_value": 255,
           "flag_meanings": "not_processed processed",
           "flag_values": [
            0,
@@ -626,7 +614,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f9e0813cef0>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fe98a11c4d0>"
       ]
      },
      "execution_count": 4,
@@ -725,7 +713,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f9e07ccade0>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fe98a095040>"
       ]
      },
      "execution_count": 5,
@@ -824,11 +812,11 @@
       "    time_bnds   (time, bnds) datetime64[ns] 16B dask.array<chunksize=(1, 2), meta=np.ndarray>\n",
       "Dimensions without coordinates: bnds\n",
       "Data variables:\n",
-      "    lccs_class  (time, lat, lon) float32 34GB dask.array<chunksize=(1, 2048, 2048), meta=np.ndarray>\n",
+      "    lccs_class  (time, lat, lon) float32 34GB dask.array<chunksize=(1, 2025, 2025), meta=np.ndarray>\n",
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.LC.yr.L4.LCCS.multi-sensor.multi-platform...\n",
-      "    date_created:            2025-04-15T13:53:37.214030\n",
+      "    date_created:            2025-04-16T11:24:41.947544\n",
       "    processing_level:        L4\n",
       "    time_coverage_start:     2015-01-01T00:00:00\n",
       "    time_coverage_end:       2016-01-01T00:00:00\n",
