--- a/notebooks/Oceancolour_CCI.ipynb
+++ b/notebooks/Oceancolour_CCI.ipynb
@@ -32,15 +32,7 @@
    "execution_count": 1,
    "id": "f05b0d63-ff02-41f8-9070-f0d9c44d9a3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen abc>:106: FutureWarning: xarray subclass VectorDataCube should explicitly define __slots__\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from xcube.core.store import new_data_store\n",
     "from esa_climate_toolbox.core import get_op\n",
@@ -51,11 +43,7 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# Suppress FutureWarnings related to xarray subclassing\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning, message=\".*xarray subclass VectorDataCube.*\")\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
+    "%matplotlib inline"
    ]
   },
   {
@@ -4753,7 +4741,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f2b32ce91c0>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fa8aed3fef0>"
       ]
      },
      "execution_count": 4,
@@ -4940,7 +4928,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f2b322ffbf0>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fa8af009ac0>"
       ]
      },
      "execution_count": 5,
@@ -5039,11 +5027,11 @@
       "    time_bnds  (time, bnds) datetime64[ns] 16B dask.array<chunksize=(1, 2), meta=np.ndarray>\n",
       "Dimensions without coordinates: bnds\n",
       "Data variables:\n",
-      "    chlor_a    (time, lat, lon) float32 149MB dask.array<chunksize=(1, 1080, 1080), meta=np.ndarray>\n",
+      "    chlor_a    (time, lat, lon) float32 149MB dask.array<chunksize=(1, 2160, 1728), meta=np.ndarray>\n",
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.OC.mon.L3S.OC_PRODUCTS.multi-sensor.multi...\n",
-      "    date_created:            2025-04-15T13:57:37.176391\n",
+      "    date_created:            2025-04-16T11:28:45.335609\n",
       "    processing_level:        L3S\n",
       "    time_coverage_start:     2022-06-01T00:00:00\n",
       "    time_coverage_end:       2022-07-01T00:00:00\n",
