--- a/notebooks/Ozone_CCI.ipynb
+++ b/notebooks/Ozone_CCI.ipynb
@@ -32,15 +32,7 @@
    "execution_count": 1,
    "id": "f05b0d63-ff02-41f8-9070-f0d9c44d9a3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen abc>:106: FutureWarning: xarray subclass VectorDataCube should explicitly define __slots__\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from xcube.core.store import new_data_store\n",
     "from esa_climate_toolbox.core import get_op\n",
@@ -51,11 +43,7 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# Suppress FutureWarnings related to xarray subclassing\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning, message=\".*xarray subclass VectorDataCube.*\")\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
+    "%matplotlib inline"
    ]
   },
   {
@@ -532,7 +520,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fddea053e00>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7ff76048a000>"
       ]
      },
      "execution_count": 4,
@@ -629,7 +617,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fddea02aae0>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7ff760080f20>"
       ]
      },
      "execution_count": 5,
@@ -732,7 +720,7 @@
       "Attributes: (12/18)\n",
       "    Conventions:                CF-1.7\n",
       "    title:                      esacci.OZONE.day.L3S.TC.multi-sensor.multi-pl...\n",
-      "    date_created:               2025-04-15T14:00:11.586934\n",
+      "    date_created:               2025-04-16T11:30:09.809290\n",
       "    processing_level:           L3S\n",
       "    time_coverage_start:        2011-06-01T00:00:00\n",
       "    time_coverage_end:          2011-06-30T00:00:00\n",
