--- a/notebooks/SSS_CCI.ipynb
+++ b/notebooks/SSS_CCI.ipynb
@@ -32,15 +32,7 @@
    "execution_count": 1,
    "id": "f05b0d63-ff02-41f8-9070-f0d9c44d9a3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen abc>:106: FutureWarning: xarray subclass VectorDataCube should explicitly define __slots__\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from xcube.core.store import new_data_store\n",
     "from esa_climate_toolbox.core import get_op\n",
@@ -51,11 +43,7 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# Suppress FutureWarnings related to xarray subclassing\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning, message=\".*xarray subclass VectorDataCube.*\")\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
+    "%matplotlib inline"
    ]
   },
   {
@@ -788,7 +776,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f6e865af980>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fa20ad6b230>"
       ]
      },
      "execution_count": 4,
@@ -891,7 +879,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f6e7c277d10>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fa209e164e0>"
       ]
      },
      "execution_count": 5,
@@ -994,7 +982,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.SEASURFACESALINITY.15-days.L4.SSS.multi-s...\n",
-      "    date_created:            2025-04-15T14:34:25.738604\n",
+      "    date_created:            2025-04-16T13:06:21.617131\n",
       "    processing_level:        L4\n",
       "    time_coverage_start:     2019-05-18T00:00:00\n",
       "    time_coverage_end:       2019-07-16T23:59:59\n",
