--- a/notebooks/Sealevel_CCI.ipynb
+++ b/notebooks/Sealevel_CCI.ipynb
@@ -32,15 +32,7 @@
    "execution_count": 1,
    "id": "f05b0d63-ff02-41f8-9070-f0d9c44d9a3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen abc>:106: FutureWarning: xarray subclass VectorDataCube should explicitly define __slots__\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from xcube.core.store import new_data_store\n",
     "from esa_climate_toolbox.core import get_op\n",
@@ -51,11 +43,7 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# Suppress FutureWarnings related to xarray subclassing\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning, message=\".*xarray subclass VectorDataCube.*\")\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
+    "%matplotlib inline"
    ]
   },
   {
@@ -421,7 +409,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f87c4373d10>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f010e50fb60>"
       ]
      },
      "execution_count": 4,
@@ -515,7 +503,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f87c44ccaa0>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f010e9c0fb0>"
       ]
      },
      "execution_count": 5,
@@ -619,7 +607,7 @@
       "Attributes: (12/18)\n",
       "    Conventions:                CF-1.7\n",
       "    title:                      esacci.SEALEVEL.mon.L4.MSLA.multi-sensor.mult...\n",
-      "    date_created:               2025-04-15T14:18:19.397040\n",
+      "    date_created:               2025-04-16T12:57:35.236526\n",
       "    processing_level:           L4\n",
       "    time_coverage_start:        2015-06-01T00:00:00\n",
       "    time_coverage_end:          2015-07-01T00:00:00\n",
