--- a/notebooks/Snow_CCI.ipynb
+++ b/notebooks/Snow_CCI.ipynb
@@ -32,15 +32,7 @@
    "execution_count": 1,
    "id": "f05b0d63-ff02-41f8-9070-f0d9c44d9a3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen abc>:106: FutureWarning: xarray subclass VectorDataCube should explicitly define __slots__\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from xcube.core.store import new_data_store\n",
     "from esa_climate_toolbox.core import get_op\n",
@@ -51,11 +43,7 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# Suppress FutureWarnings related to xarray subclassing\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning, message=\".*xarray subclass VectorDataCube.*\")\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
+    "%matplotlib inline"
    ]
   },
   {
@@ -551,7 +539,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fce40ca3ef0>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f237cf988f0>"
       ]
      },
      "execution_count": 4,
@@ -622,7 +610,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fce40ca3350>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f237cff8da0>"
       ]
      },
      "execution_count": 5,
@@ -728,7 +716,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.SNOW.day.L3C.SWE.multi-sensor.multi-platf...\n",
-      "    date_created:            2025-04-15T14:31:05.481336\n",
+      "    date_created:            2025-04-16T13:02:33.376107\n",
       "    processing_level:        L3C\n",
       "    time_coverage_start:     2000-03-01T00:00:00\n",
       "    time_coverage_end:       2000-03-02T00:00:00\n",
