--- a/notebooks/Soilmoisture_CCI.ipynb
+++ b/notebooks/Soilmoisture_CCI.ipynb
@@ -32,15 +32,7 @@
    "execution_count": 1,
    "id": "f05b0d63-ff02-41f8-9070-f0d9c44d9a3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen abc>:106: FutureWarning: xarray subclass VectorDataCube should explicitly define __slots__\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from xcube.core.store import new_data_store\n",
     "from esa_climate_toolbox.core import get_op\n",
@@ -51,11 +43,7 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# Suppress FutureWarnings related to xarray subclassing\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning, message=\".*xarray subclass VectorDataCube.*\")\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
+    "%matplotlib inline"
    ]
   },
   {
@@ -264,7 +252,7 @@
           "file_dimensions": [
            "time"
           ],
-          "fill_value": -1,
+          "fill_value": 65535,
           "long_name": "time stamp",
           "orig_data_type": "uint16",
           "shape": [
@@ -804,7 +792,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f6b0421c2c0>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7efbe3606210>"
       ]
      },
      "execution_count": 4,
@@ -905,7 +893,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f6a87a74c20>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7efb84a3f230>"
       ]
      },
      "execution_count": 5,
@@ -1008,7 +996,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.SOILMOISTURE.day.L3S.SSMV.multi-sensor.mu...\n",
-      "    date_created:            2025-04-15T14:32:45.793555\n",
+      "    date_created:            2025-04-16T13:04:58.710138\n",
       "    processing_level:        L3S\n",
       "    time_coverage_start:     2022-06-21T00:00:00\n",
       "    time_coverage_end:       2022-06-22T00:00:00\n",
