--- a/notebooks/SST_CCI.ipynb
+++ b/notebooks/SST_CCI.ipynb
@@ -32,15 +32,7 @@
    "execution_count": 1,
    "id": "f05b0d63-ff02-41f8-9070-f0d9c44d9a3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen abc>:106: FutureWarning: xarray subclass VectorDataCube should explicitly define __slots__\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from xcube.core.store import new_data_store\n",
     "from esa_climate_toolbox.core import get_op\n",
@@ -51,11 +43,7 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# Suppress FutureWarnings related to xarray subclassing\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning, message=\".*xarray subclass VectorDataCube.*\")\n",
-    "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
+    "%matplotlib inline"
    ]
   },
   {
@@ -518,7 +506,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "flag_masks": [
            1,
            2,
@@ -573,7 +561,7 @@
            "lat",
            "lon"
           ],
-          "fill_value": -128,
+          "fill_value": 128,
           "long_name": "sea ice area fraction",
           "orig_data_type": "uint8",
           "scale_factor": 0.01,
@@ -676,7 +664,7 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f8075dfef30>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f0daf204b30>"
       ]
      },
      "execution_count": 4,
@@ -773,7 +761,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f800729d580>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f0daf1e0860>"
       ]
      },
      "execution_count": 5,
@@ -878,7 +866,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.SST.day.L4.SSTdepth.multi-sensor.multi-pl...\n",
-      "    date_created:            2025-04-15T14:36:03.881473\n",
+      "    date_created:            2025-04-16T14:16:28.082198\n",
       "    processing_level:        L4\n",
       "    time_coverage_start:     2016-06-21T00:00:00\n",
       "    time_coverage_end:       2016-06-22T00:00:00\n",
