--- a/notebooks/Aerosol_CCI.ipynb
+++ b/notebooks/Aerosol_CCI.ipynb
@@ -43,6 +43,7 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
+    "warnings.filterwarnings(\"ignore\") # Suppressing warnings to keep notebook output clean\n",
     "%matplotlib inline"
    ]
   },
@@ -72,7 +73,7 @@
    "source": [
     "cci_store = new_data_store(\"esa-cci\")\n",
     "# List all available data sets of an ECV\n",
-    "  # list_ecv_datasets(\"Aerosol\")"
+    "# list_ecv_datasets(\"Aerosol\")"
    ]
   },
   {
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7672a7f4-be9a-4b8f-a888-93d31647d5b4",
    "metadata": {},
    "outputs": [],
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1ccb7546-70f0-479d-bb0a-d902190500af",
    "metadata": {},
    "outputs": [
@@ -2547,10 +2548,10 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f949ab1f440>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f1d95933290>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2573,7 +2574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a0ee1118-47e2-47c4-9401-1bb069776fdc",
    "metadata": {},
    "outputs": [
@@ -2691,10 +2692,10 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f949ab03fb0>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f1d95c86120>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2719,7 +2720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8a2be689-288c-4fb5-abe9-99b4b84eef07",
    "metadata": {},
    "outputs": [],
@@ -2744,7 +2745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "145b10bc-68b4-4645-a4a8-761965cb6098",
    "metadata": {},
    "outputs": [],
@@ -2771,7 +2772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "192daaeb-241a-4fba-956f-3e7ac8cb04b5",
    "metadata": {},
    "outputs": [
@@ -2794,7 +2795,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.AEROSOL.day.L3C.AER_PRODUCTS.AATSR.Envisa...\n",
-      "    date_created:            2025-04-16T11:04:51.014622\n",
+      "    date_created:            2025-08-12T09:19:39.881130\n",
       "    processing_level:        L3C\n",
       "    time_coverage_start:     2011-06-21T00:00:00\n",
       "    time_coverage_end:       2011-06-22T00:00:00\n",
@@ -2821,11 +2822,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "65ec997b-a0e8-40d7-8aa9-737a3ac2ec0d",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
