--- a/notebooks/Cloud_CCI.ipynb
+++ b/notebooks/Cloud_CCI.ipynb
@@ -43,6 +43,7 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
+    "warnings.filterwarnings(\"ignore\") # Suppressing warnings to keep notebook output clean\n",
     "%matplotlib inline"
    ]
   },
@@ -65,14 +66,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "94164c99-2ef2-48d7-b098-6e136ee861af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('esacci.CLOUD.mon.L3C.CLD_PRODUCTS.MODIS.Aqua.MODIS_AQUA.2-0.r1', 'esa-cci'),\n",
+       " ('esacci.CLOUD.mon.L3C.CLD_PRODUCTS.MODIS.Terra.MODIS_TERRA.2-0.r1',\n",
+       "  'esa-cci'),\n",
+       " ('esacci.CLOUD.mon.L3C.CLD_PRODUCTS.multi-sensor.multi-platform.ATSR2-AATSR.3-0.r1',\n",
+       "  'esa-cci'),\n",
+       " ('esacci.CLOUD.mon.L3C.CLD_PRODUCTS.multi-sensor.multi-platform.AVHRR-AM.3-0.r1',\n",
+       "  'esa-cci'),\n",
+       " ('esacci.CLOUD.mon.L3C.CLD_PRODUCTS.multi-sensor.multi-platform.AVHRR-PM.3-0.r1',\n",
+       "  'esa-cci'),\n",
+       " ('esacci.CLOUD.mon.L3C.CLD_PRODUCTS.multi-sensor.multi-platform.MERIS-AATSR.2-0.r1',\n",
+       "  'esa-cci'),\n",
+       " ('ESACCI-L3C_CLOUD-CLD_PRODUCTS-MODIS_AQUA-200208-201412-fv2.0_kr1.0',\n",
+       "  'esa-cci-kc'),\n",
+       " ('ESACCI-L3C_CLOUD-CLD_PRODUCTS-ATSR2_AATSR-199506-201204-fv3.0-kr1.1',\n",
+       "  'esa-cci-kc'),\n",
+       " ('ESACCI-L3C_CLOUD-CLD_PRODUCTS-AVHRR_AM-199109-201612-fv3.0-kr1.1',\n",
+       "  'esa-cci-kc'),\n",
+       " ('ESACCI-L3C_CLOUD-CLD_PRODUCTS-AVHRR_PM-198201-201612-fv3.0-kr1.1',\n",
+       "  'esa-cci-kc'),\n",
+       " ('ESACCI-L3C_CLOUD-CLD_PRODUCTS-MERIS-AATSR_ENVISAT-200301-201112_fv2.0_kr1.0',\n",
+       "  'esa-cci-kc'),\n",
+       " ('ESACCI-L3C_CLOUD-CLD_PRODUCTS-AVHRR_NOAA-1982-2016-fv3.0.zarr',\n",
+       "  'esa-cci-zarr')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cci_store = new_data_store(\"esa-cci\")\n",
     "# List all available data sets of an ECV\n",
-    "# list_ecv_datasets(\"Cloud\")"
+    "list_ecv_datasets(\"Cloud\")"
    ]
   },
   {
@@ -90,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7672a7f4-be9a-4b8f-a888-93d31647d5b4",
    "metadata": {},
    "outputs": [],
@@ -116,7 +150,7 @@
     "\n",
     "Before loading the full dataset, it’s helpful to **inspect the metadata** to understand its structure. This includes:\n",
     "\n",
-    "- Available variables (e.g., AOD, uncertainty estimates)\n",
+    "- Available variables (e.g., cfc, uncertainty estimates)\n",
     "- Temporal and spatial coverage\n",
     "- Data format and structure\n",
     "\n",
@@ -130,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1ccb7546-70f0-479d-bb0a-d902190500af",
    "metadata": {},
    "outputs": [
@@ -9619,10 +9653,10 @@
        ]
       },
       "text/plain": [
-       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7f238c1ceb40>"
+       "<xcube.core.store.descriptor.DatasetDescriptor at 0x7fa3393d6870>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9645,7 +9679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a0ee1118-47e2-47c4-9401-1bb069776fdc",
    "metadata": {},
    "outputs": [
@@ -9892,10 +9926,10 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f230f6a5d30>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fa33bf68290>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9920,7 +9954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "8a2be689-288c-4fb5-abe9-99b4b84eef07",
    "metadata": {},
    "outputs": [],
@@ -9945,7 +9979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "145b10bc-68b4-4645-a4a8-761965cb6098",
    "metadata": {},
    "outputs": [],
@@ -9972,7 +10006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "192daaeb-241a-4fba-956f-3e7ac8cb04b5",
    "metadata": {},
    "outputs": [
@@ -10016,7 +10050,7 @@
       "Attributes:\n",
       "    Conventions:             CF-1.7\n",
       "    title:                   esacci.CLOUD.mon.L3C.CLD_PRODUCTS.multi-sensor.m...\n",
-      "    date_created:            2025-04-16T11:18:46.576835\n",
+      "    date_created:            2025-08-12T12:26:03.387794\n",
       "    processing_level:        L3C\n",
       "    time_coverage_start:     2016-06-01T00:00:00\n",
       "    time_coverage_end:       2016-07-01T00:00:00\n",
@@ -10037,17 +10071,15 @@
     "### Step 9: Visualize Results\n",
     "\n",
     "We now create a simple map plot of the selected variable.  \n",
-    "This allows us to explore the spatial patterns of the data — in this case, the Aerosol Optical Depth (AOD) for the selected day.\n",
+    "This allows us to explore the spatial patterns of the data — in this case, the Cloud Fraction (CFC) for the selected day.\n",
     "For more interactive and advanced visualizations, check out the [ESA Climate Toolbox](https://climate.esa.int/en/data/toolbox/) or the [Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#jupyter-notebooks)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "65ec997b-a0e8-40d7-8aa9-737a3ac2ec0d",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -10065,6 +10097,7 @@
     "\n",
     "# Select the cloud fraction data at the available time (e.g. first and only time slice)\n",
     "cfc = cloud_ds[\"cfc\"].isel(time=0)\n",
+    "time_str = cloud_ds['time'].isel(time=0).dt.strftime('%B %Y').item()\n",
     "\n",
     "# Plot\n",
     "plt.figure(figsize=(10, 5))\n",
@@ -10072,7 +10105,7 @@
     "    cmap=\"Blues_r\",  # reverse blues\n",
     "    cbar_kwargs={\"label\": \"Cloud Fraction (0-1)\"}\n",
     ")\n",
-    "plt.title(\"Cloud Fraction – June 2016 (Cloud CCI)\")\n",
+    "plt.title(\"Cloud Fraction – \" + time_str + \" (Cloud CCI)\")\n",
     "plt.xlabel(\"Longitude\")\n",
     "plt.ylabel(\"Latitude\")\n",
     "plt.tight_layout()\n",
