Added suppression of warnings to keep notebook output clean, corrected typos

--- a/notebooks/GHG_CCI.ipynb
+++ b/notebooks/GHG_CCI.ipynb
@@ -43,6 +43,7 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
+    "warnings.filterwarnings(\"ignore\") # Suppressing warnings to keep notebook output clean\n",
     "%matplotlib inline"
    ]
   },
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "94164c99-2ef2-48d7-b098-6e136ee861af",
    "metadata": {},
    "outputs": [],
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7672a7f4-be9a-4b8f-a888-93d31647d5b4",
    "metadata": {},
    "outputs": [],
@@ -109,7 +110,7 @@
     "\n",
     "Before loading the full dataset, it’s helpful to **inspect the metadata** to understand its structure. This includes:\n",
     "\n",
-    "- Available variables (e.g., AOD, uncertainty estimates)\n",
+    "- Available variables (e.g., xch4, uncertainty estimates)\n",
     "- Temporal and spatial coverage\n",
     "- Data format and structure\n",
     "\n",
@@ -490,7 +491,7 @@
        "type": "object"
       },
       "text/plain": [
-       "<xcube.util.jsonschema.JsonObjectSchema at 0x7f7c607bce30>"
+       "<xcube.util.jsonschema.JsonObjectSchema at 0x7fad2076fe90>"
       ]
      },
      "execution_count": 5,
@@ -609,7 +610,7 @@
     "### Step 9: Visualize Results\n",
     "\n",
     "We now create a simple map plot of the selected variable.  \n",
-    "This allows us to explore the spatial patterns of the data — in this case, the Aerosol Optical Depth (AOD) for the selected day.\n",
+    "This allows us to explore the spatial patterns of the data — in this case, the column-averaged methane concentration (XCH4) for the selected day.\n",
     "For more interactive and advanced visualizations, check out the [ESA Climate Toolbox](https://climate.esa.int/en/data/toolbox/) or the [Toolbox documentation](https://esa-climate-toolbox.readthedocs.io/en/latest/quick_start.html#jupyter-notebooks)."
    ]
   },
@@ -617,9 +618,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "65ec997b-a0e8-40d7-8aa9-737a3ac2ec0d",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
