--- a/notebooks/Ozone_CCI.ipynb
+++ b/notebooks/Ozone_CCI.ipynb
@@ -56,6 +56,7 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
+    "warnings.filterwarnings(\"ignore\") # Suppressing warnings to keep notebook output clean\n",
     "%matplotlib inline"
    ]
   },
